lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_nested_list-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    FnDef(
        FnDef {
            args: [
                Ident {
                    raw: "a",
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
            ],
            body: Nil(
                NilLit {
                    span: Span {
                        start: 14,
                        end: 17,
                    },
                },
            ),
            recursive: true,
            span: Span {
                start: 0,
                end: 17,
            },
        },
    ),
)
