lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_nested_list-4.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Block(
        Block {
            statements: [
                Define(
                    Define {
                        ident: Ident {
                            raw: "x",
                            span: Span {
                                start: 6,
                                end: 7,
                            },
                        },
                        value: I64(
                            I64Lit {
                                base: Dec,
                                value: "2",
                                span: Span {
                                    start: 11,
                                    end: 12,
                                },
                            },
                        ),
                        span: Span {
                            start: 2,
                            end: 13,
                        },
                    },
                ),
            ],
            value: Some(
                Ident(
                    Ident {
                        raw: "x",
                        span: Span {
                            start: 14,
                            end: 15,
                        },
                    },
                ),
            ),
            span: Span {
                start: 0,
                end: 17,
            },
        },
    ),
)
