lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_nested_list-5.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    If(
        If {
            cond: IfCond {
                cond: Bool(
                    BoolLit {
                        value: true,
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 3,
                            end: 7,
                        },
                    },
                ),
                body: Block {
                    statements: [],
                    value: None,
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 8,
                        end: 11,
                    },
                },
                span: Span {
                    file: FileId(
                        0,
                    ),
                    start: 0,
                    end: 11,
                },
            },
            elif: [],
            els_: None,
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 11,
            },
        },
    ),
)
