lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_nested_list-6.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    If(
        If {
            cond: IfCond {
                cond: Bool(
                    BoolLit {
                        value: true,
                        span: Span {
                            start: 3,
                            end: 7,
                        },
                    },
                ),
                body: Block {
                    statements: [],
                    value: None,
                    span: Span {
                        start: 8,
                        end: 11,
                    },
                },
                span: Span {
                    start: 0,
                    end: 11,
                },
            },
            elif: [
                IfCond {
                    cond: Bool(
                        BoolLit {
                            value: false,
                            span: Span {
                                start: 17,
                                end: 22,
                            },
                        },
                    ),
                    body: Block {
                        statements: [],
                        value: None,
                        span: Span {
                            start: 23,
                            end: 26,
                        },
                    },
                    span: Span {
                        start: 12,
                        end: 26,
                    },
                },
            ],
            els_: None,
            span: Span {
                start: 0,
                end: 26,
            },
        },
    ),
)
