lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_pratt_expressions-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Unary(
        Unary {
            rhs: Unary(
                Unary {
                    rhs: Bool(
                        BoolLit {
                            value: true,
                            span: Span {
                                start: 2,
                                end: 6,
                            },
                        },
                    ),
                    op: Lnot,
                    span: Span {
                        start: 1,
                        end: 6,
                    },
                    op_span: Span {
                        start: 1,
                        end: 2,
                    },
                },
            ),
            op: Lnot,
            span: Span {
                start: 0,
                end: 6,
            },
            op_span: Span {
                start: 0,
                end: 1,
            },
        },
    ),
)
