lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_pratt_expressions-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Unary(
        Unary {
            rhs: Index(
                Index {
                    lhs: Index(
                        Index {
                            lhs: Ident(
                                Ident {
                                    raw: "hello",
                                    span: Span {
                                        start: 1,
                                        end: 6,
                                    },
                                },
                            ),
                            rhs: Ident(
                                Ident {
                                    raw: "there",
                                    span: Span {
                                        start: 7,
                                        end: 12,
                                    },
                                },
                            ),
                            span: Span {
                                start: 1,
                                end: 13,
                            },
                        },
                    ),
                    rhs: Ident(
                        Ident {
                            raw: "people",
                            span: Span {
                                start: 14,
                                end: 20,
                            },
                        },
                    ),
                    span: Span {
                        start: 1,
                        end: 21,
                    },
                },
            ),
            op: Nneg,
            span: Span {
                start: 0,
                end: 21,
            },
            op_span: Span {
                start: 0,
                end: 1,
            },
        },
    ),
)
