lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_pratt_expressions.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Unary(
        Unary {
            rhs: Unary(
                Unary {
                    rhs: Unary(
                        Unary {
                            rhs: Unary(
                                Unary {
                                    rhs: Unary(
                                        Unary {
                                            rhs: I64(
                                                I64Lit {
                                                    base: Dec,
                                                    value: "2",
                                                    span: Span {
                                                        start: 9,
                                                        end: 10,
                                                    },
                                                },
                                            ),
                                            op: Nneg,
                                            span: Span {
                                                start: 8,
                                                end: 10,
                                            },
                                            op_span: Span {
                                                start: 8,
                                                end: 9,
                                            },
                                        },
                                    ),
                                    op: Nneg,
                                    span: Span {
                                        start: 6,
                                        end: 10,
                                    },
                                    op_span: Span {
                                        start: 6,
                                        end: 7,
                                    },
                                },
                            ),
                            op: Nneg,
                            span: Span {
                                start: 4,
                                end: 10,
                            },
                            op_span: Span {
                                start: 4,
                                end: 5,
                            },
                        },
                    ),
                    op: Nneg,
                    span: Span {
                        start: 2,
                        end: 10,
                    },
                    op_span: Span {
                        start: 2,
                        end: 3,
                    },
                },
            ),
            op: Nneg,
            span: Span {
                start: 0,
                end: 10,
            },
            op_span: Span {
                start: 0,
                end: 1,
            },
        },
    ),
)
